# Copyright (c) 2016 Chris Liebert
# This software is available under the "MIT License" see LICENSE
[package]
name = "quick3d"
version = "0.1.6"
authors = ["chrisliebert <liebert@pdx.edu>"]
keywords = ["3D", "Glium", "OpenGL", "graphics"]
description = "A 3D rendering framework written in Rust."
include = [
	"src/common.rs",
	"src/lib.rs",
	"src/loader.rs",
	"src/renderer.rs",
	"src/example.rs",
	"Cargo.toml",
]
readme = "README.md"
repository = "https://github.com/chrisliebert/quick-3d.git"
license-file = "LICENSE"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[lib]
name = "quick3d"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]

[[bin]]
name = "example"
path = "src/example.rs"

[dependencies]
glium = "*"
nalgebra = "0.9.*"
rusqlite = "0.7.3"
time = "0.1.35"
image = "0.10.3"
libc = "0.2.15"
