# Copyright (c) 2016 Chris Liebert
# This software is available under the "MIT License" see LICENSE
[package]
name = "quick3d"
version = "0.1.7"
authors = ["chrisliebert <liebert@pdx.edu>"]
keywords = ["3D", "Glium", "OpenGL", "graphics"]
description = "A 3D rendering framework written in Rust."
include = [
	"src/common.rs",
	"src/lib.rs",
	"src/loader.rs",
	"src/renderer.rs",
	"src/example.rs",
	"Cargo.toml",
]
readme = "README.md"
repository = "https://github.com/chrisliebert/quick-3d.git"
license-file = "LICENSE"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[features]
# no features by default
default = []

# obj2sqlite/scenebuilder uses stdc++ and sqlite
sqlite = ["rusqlite"]

[lib]
name = "quick3d"
path = "src/lib.rs"
crate-type = ["dylib", "staticlib", "rlib"]

[[example]]
name = "example"
path = "src/example.rs"

[dependencies]
glium = "*"
nalgebra = "0.9.*"
rusqlite = { version = "0.7.3", optional = true}
time = "0.1.35"
image = "0.10.3"
libc = "0.2.15"
rustc-serialize = "*"
bincode = "*"
flate2 = "*"
